package de.weltraumschaf.caythe.intermediate.model;

/**
 * The facet of a {@link Type}.
 *
 * @author Sven Strittmatter &lt;weltraumschaf@googlemail.com&gt;
 * @since 1.0.0
 */
public enum Facet {
    UNDEFINED,
    CLASS,
    INTERFACE,
    ANNOTATION,
    ENUM;
}
