@startuml

skinparam componentStyle uml2

interface Type<T> <<Native>> {
    + List<Property> properties <<Property>>
    + List<Method> methods <<Method>>
    --
    +T new()
    +String name()
    +String fullQualifiedName()
}

class Property <<Native>>
class Method <<Native>>
enum Facet <<Native>> {
    +INTERFACE
    +CLASS
    +ENUMERATION
    +ANNOTATION
}

Type -- Property
Type -- Method
Type -- Facet

object ObjectType <<Native, Dynamic>> {
    +Object new()
    ...
}
ObjectType ..|> Type

class Object {
    + Type<Object> type <<native>>
    --
    +toString()
    +hashCode()
    +equals(Any)
}
Object -> ObjectType : type

object SomethingType <<Native, Dynamic>> {
    +Something new()
    ...
}
SomethingType ..|> Type

class Something {
    + Type<Something> type <<native>>
    --
    + String foo <<Property>>
    + String bar <<Property>>
    --
    + initWith(String foo, String bar)
}

Something ..> Object : delegate
Something -> SomethingType : type

note left of Something {
    var s = Something.type.new()
    // or shorthand:
    var s = Something.new()
    s.initWith("foo", "bar")

    var t = Something.type
    ... t.properties
    ... t.methods
}

@enduml